force-app/main/default/objects/Content_Publication_Budget__c/fields/Suspended_Until_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Until_DateTime__c</fullName>
    <description>When Is_Suspended__c is true, the timestamp the breaker automatically clears at (design §6.5 — BREAKER_SUSPEND_HOURS = 24, measured from the trip). Read by ContentPublicationBudget.canPublish() to auto-clear the suspension once now() passes this value.</description>
    <inlineHelpText>Blank when Is_Suspended__c is false.</inlineHelpText>
    <label>Suspended Until</label>
    <type>DateTime</type>
</CustomField>