force-app/main/default/objects/Content_Publication_Budget__c/fields/Window_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Window_Start_DateTime__c</fullName>
    <description>Start of the current rolling-24-hour publication-count window (design §6.6). ContentPublicationBudget rolls Publication_Count__c back to 0 and resets this to the current time when it is found to be more than 24 hours old.</description>
    <inlineHelpText>Set automatically by ContentPublicationBudget on first use and on every window rollover. Do not edit manually except to force an early rollover.</inlineHelpText>
    <label>Window Start</label>
    <type>DateTime</type>
</CustomField>